# http_server

./: .gitignore  CMakeLists.txt  README.md
certs/: cacert.pem  cakey.pem  private.pem  public.pem  server.crt  server.csr  server.key  server.key.secure
src/: CMakeLists.txt  bot_processor.h  content_type.h  http_dispatcher.h  http_processor.h  main.cpp  server_config.h  session_factory.h  static_webpage_processor.h
src/detail/: async_ssl_socket.h  async_stream_socket.h  async_tcp_socket.h  config.h  http_parser.h  http_server.h  http_session.h  https_server.h  log.h  tcp_server.h  uri.h
src/tgbot/: TgParser.h  TgTypeParser.cpp  TgTypeParser.h
src/tgbot/types/: InputFile.cpp
tools/: SetWebhook.html
